# ferrumc

./: AGENTS.md  API_SAFETY.md  ARCHITECTURE.md  BAD_CODE_EXAMPLES.md  COMMANDS.md  COMMAND_API_IMPLEMENTATION.md  Cargo.toml  DOCUMENTATION_CONSOLIDATION.md  ENTITY_API_IMPLEMENTATION.md  FEATURES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MIGRATION_SUMMARY.md  MIGRATION_TODO.md  NEXT_MIGRATION.md  NEXT_STEPS.md  PERMISSIONS_IMPLEMENTATION.md  PLUGINS.md  PLUGIN_ARCHITECTURE.md  PLUGIN_QUICKSTART.md  PLUGIN_REFACTOR_PLAN.md  PLUGIN_REVIEW.md  PLUGIN_VS_CORE.md  PROTOCOL.md  REAL_ENFORCEMENT_PLAN.md  REAL_ENFORCEMENT_RESULTS.md  plugins.toml
.etc/: example-config.toml
.github/workflows/: plugin_system.md
assets/data/configs/: main-config.toml
src/lib/adapters/anvil/src/: lib.rs
src/lib/adapters/nbt/src/de/: borrow.rs
src/lib/apis/animation-api/: Cargo.toml
src/lib/apis/animation-api/src/: events.rs  lib.rs  traits.rs  types.rs
src/lib/apis/block-api/: Cargo.toml
src/lib/apis/block-api/src/: events.rs  traits.rs  types.rs
src/lib/apis/chat-api/: Cargo.toml
src/lib/apis/chat-api/src/: events.rs  lib.rs  traits.rs
src/lib/apis/commands-api/: Cargo.toml
src/lib/apis/commands-api/src/: events.rs  lib.rs
src/lib/apis/entity-api/: Cargo.toml
src/lib/apis/entity-api/src/: events.rs  lib.rs
src/lib/apis/inventory-api/: Cargo.toml
src/lib/apis/inventory-api/src/: events.rs  lib.rs  traits.rs
src/lib/apis/join-leave-api/: Cargo.toml
src/lib/apis/join-leave-api/src/: lib.rs
src/lib/apis/movement-api/: Cargo.toml
src/lib/apis/movement-api/src/: lib.rs
src/lib/apis/permissions-api/: Cargo.toml
src/lib/apis/permissions-api/src/: events.rs  traits.rs
src/lib/commands/: Cargo.toml
src/lib/commands/src/: ctx.rs  events.rs  infrastructure.rs  lib.rs  sender.rs
src/lib/commands/src/arg/: duration.rs  entity.rs  mod.rs  position.rs
src/lib/commands/src/arg/primitive/: bool.rs  char.rs  float.rs  int.rs  long.rs  mod.rs  string.rs
src/lib/config/src/: server_config.rs
src/lib/core/: Cargo.toml
src/lib/core-systems/: Cargo.toml
src/lib/core-systems/src/: lib.rs
src/lib/core-systems/src/animations/: broadcast.rs  mod.rs  packet_handlers.rs  player_command_handler.rs  player_input_handler.rs  pose_broadcast.rs
src/lib/core-systems/src/blocks/: block_operations.rs  broadcasters.rs  mod.rs  packet_handlers.rs
src/lib/core-systems/src/chat/: broadcaster.rs  mod.rs  packet_handler.rs
src/lib/core-systems/src/commands/: broadcaster.rs  mod.rs
src/lib/core-systems/src/entity/: broadcaster.rs  mod.rs
src/lib/core-systems/src/inventory/: broadcaster.rs  mod.rs  packet_handlers.rs
src/lib/core-systems/src/join_leave/: broadcaster.rs
src/lib/core-systems/src/movement/: broadcaster.rs  mod.rs  packet_handlers.rs  teleporter.rs
src/lib/core/src/: lib.rs
src/lib/core/src/chunks/: chunk_loading_rings.rs  chunk_receiver.rs  initial_chunks_marker.rs  mod.rs
src/lib/core/src/permissions/: mod.rs  player_permissions.rs
src/lib/core/src/transform/: position.rs
src/lib/derive_macros/src/commands/: mod.rs
src/lib/net/crates/codec/src/encode/: mod.rs
src/lib/net/crates/encryption/: Cargo.toml
src/lib/net/crates/encryption/src/: lib.rs
src/lib/net/src/: connection.rs
src/lib/net/src/conn_init/: login.rs  mod.rs  status.rs
src/lib/net/src/packets/incoming/: client_information_play.rs  encryption.rs  mod.rs  player_command.rs  player_input.rs
src/lib/net/src/packets/outgoing/: encryption.rs  entity_metadata.rs  login_play.rs  mod.rs  set_render_distance.rs
src/lib/plugin-api/: Cargo.toml
src/lib/plugin-api/src/: build_context.rs  capabilities.rs  context.rs  entity.rs  events.rs  lib.rs  macros.rs  prelude.rs  tests.rs  world.rs
src/lib/plugin-api/src/queries/: entity.rs  inventory.rs  mod.rs  world.rs
src/lib/plugins/core/animations/: Cargo.toml
src/lib/plugins/core/animations/src/: lib.rs
src/lib/plugins/core/blocks/: Cargo.toml
src/lib/plugins/core/blocks/src/: lib.rs
src/lib/plugins/core/chat/: Cargo.toml
src/lib/plugins/core/chat/src/: lib.rs
src/lib/plugins/core/default-commands/: Cargo.toml
src/lib/plugins/core/default-commands/src/: lib.rs
src/lib/plugins/core/entity-sync/: Cargo.toml
src/lib/plugins/core/entity-sync/src/: lib.rs  position.rs  rotation.rs
src/lib/plugins/core/inventory/: Cargo.toml
src/lib/plugins/core/inventory-sync/: Cargo.toml
src/lib/plugins/core/inventory-sync/src/: lib.rs
src/lib/plugins/core/inventory/src/: lib.rs
src/lib/plugins/core/join-leave/: Cargo.toml
src/lib/plugins/core/join-leave/src/: lib.rs
src/lib/plugins/core/movement/: Cargo.toml
src/lib/plugins/core/movement/src/: lib.rs
src/lib/plugins/core/permissions/: Cargo.toml
src/lib/plugins/core/permissions/src/: lib.rs
src/lib/plugins/examples/hello/: Cargo.toml
src/lib/plugins/examples/hello/src/: lib.rs
src/lib/plugins/test_violations/: Cargo.toml
src/lib/plugins/test_violations/src/: lib.rs
src/lib/plugins/vanilla/animations/: Cargo.toml
src/lib/plugins/vanilla/animations/src/: lib.rs
src/lib/plugins/vanilla/blocks/: Cargo.toml
src/lib/plugins/vanilla/blocks/src/: item_mapping.rs  lib.rs
src/lib/plugins/vanilla/chat/: Cargo.toml
src/lib/plugins/vanilla/chat/src/: lib.rs
src/lib/plugins/vanilla/commands/: Cargo.toml
src/lib/plugins/vanilla/commands/src/: lib.rs  mq_bridge.rs
src/lib/plugins/vanilla/commands/src/commands/: communication.rs  mod.rs  permissions.rs
src/lib/plugins/vanilla/join-leave/: Cargo.toml
src/lib/plugins/vanilla/join-leave/src/: lib.rs
src/lib/plugins/vanilla/movement/: Cargo.toml
src/lib/plugins/vanilla/movement/src/: broadcasting.rs  lib.rs  validation.rs
src/lib/plugins/vanilla/spawn-safety/: Cargo.toml
src/lib/plugins/vanilla/spawn-safety/src/: lib.rs
src/lib/utils/config/: Cargo.toml
src/lib/utils/config/src/: server_config.rs  setup.rs  statics.rs  whitelist.rs
src/lib/utils/general_purpose/src/simd/: arrays.rs
src/lib/world/src/: chunk_format.rs  edits.rs  importing.rs
