[package]
name = "ferrumc-core-systems"
version = "0.1.0"
edition = "2021"
description = "Core I/O systems for FerrumC - converts packets to/from domain events"

[dependencies]
bevy_ecs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Core infrastructure
ferrumc-core = { workspace = true }
ferrumc-inventories = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-net = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-state = { workspace = true }
ferrumc-world = { workspace = true }

# Domain APIs
ferrumc-animation-api = { workspace = true }
ferrumc-block-api = { workspace = true }
ferrumc-chat-api = { workspace = true }
ferrumc-commands-api = { workspace = true }
ferrumc-inventory-api = { workspace = true }
ferrumc-join-leave-api = { workspace = true }
ferrumc-movement-api = { workspace = true }

[lints]
workspace = true
