[package]
name = "ferrumc-plugin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# ECS
bevy_ecs = { workspace = true }

# Server state and core types
ferrumc-state = { path = "../core/state" }
ferrumc-world = { path = "../world" }
ferrumc-world-gen = { path = "../world_gen" }
ferrumc-core = { path = "../core" }
ferrumc-net = { path = "../net" }
ferrumc-net-codec = { path = "../net/crates/codec" }
ferrumc-text = { path = "../text" }
ferrumc-commands = { path = "../commands" }
ferrumc-scheduler = { path = "../scheduler" }
ferrumc-inventories = { path = "../inventories" }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }

[lints]
workspace = true
