[package]
name = "ferrumc-plugin-inventory"
version = "0.1.0"
edition = "2021"
description = "Inventory gameplay plugin for FerrumC"

[dependencies]
# NO bevy_ecs - use plugin-api prelude instead
tracing = { workspace = true }

# Core infrastructure
ferrumc-inventories = { workspace = true }

# Domain API
ferrumc-inventory-api = { workspace = true }

# Plugin framework
ferrumc-plugin-api = { workspace = true }

# NO ferrumc-state - use APIs instead
# NO ferrumc-core - not needed

[lints]
workspace = true
