[package]
name = "ferrumc-plugin-movement"
version = "0.1.0"
edition = "2021"

[dependencies]
# Plugin API
ferrumc-plugin-api = { path = "../../../plugin-api" }

# Domain API
ferrumc-movement-api = { path = "../../../apis/movement-api" }

# Core types
ferrumc-core = { path = "../../../core" }

# Logging
tracing = { workspace = true }

[lints]
workspace = true
