[package]
name = "ferrumc-plugin-vanilla-blocks"
version = "1.0.0"
edition = "2021"

[dependencies]
ferrumc-plugin-api = { path = "../../../plugin-api" }
ferrumc-block-api = { path = "../../../apis/block-api" }
ferrumc-core = { path = "../../../core" }
tracing = { workspace = true }

[lints]
workspace = true
