[package]
name = "ferrumc-plugin-vanilla-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
bevy_ecs = { workspace = true }

# Plugin framework
ferrumc-plugin-api = { workspace = true }

# Domain APIs
ferrumc-chat-api = { workspace = true }
ferrumc-commands-api = { workspace = true }
ferrumc-permissions-api = { workspace = true }

# Core types
ferrumc-core = { workspace = true }
ferrumc-text = { workspace = true }
ferrumc-commands = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-config = { workspace = true }
ctor = { workspace = true }

[lints]
workspace = true
