[package]
name = "ferrumc-plugin-vanilla-join-leave"
version = "1.0.0"
edition = "2021"

[dependencies]
ferrumc-plugin-api = { path = "../../../plugin-api" }
ferrumc-join-leave-api = { path = "../../../apis/join-leave-api" }
ferrumc-text = { path = "../../../text" }
tracing = { workspace = true }

[lints]
workspace = true
