[package]
name = "ferrumc-plugin-vanilla-spawn-safety"
version = "1.0.0"
edition = "2021"

[dependencies]
ferrumc-plugin-api = { path = "../../../plugin-api" }
ferrumc-join-leave-api = { path = "../../../apis/join-leave-api" }
ferrumc-movement-api = { path = "../../../apis/movement-api" }
ferrumc-core = { path = "../../../core" }
ferrumc-world = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
